# NFCAiME-AiMEIO

./: .gitignore  LICENSE  NFCAiME.AimeIO.Mod.toml  README.md
NFCAiME.AimeIO.Mod/: NFCAiME.AimeIO.Mod.csproj
NFCAiME.AimeIO.Mod/src/: AesGcmDecryptor.cs  AimeDbResolver.cs  AimeReaderPatches.cs  AssemblyInfo.cs  CardCache.cs  CardPayload.cs  FlatJson.cs  Hex.cs  ModConfig.cs  NFCAimeAimeIoMod.cs  PayloadParser.cs  RelayClient.cs
docs/: AiMEIO_TEST_GUIDE.md
nfcaimeio/: CMakeLists.txt  nfcaimeio.cpp  nfcaimeio.def
relay/: relay.py
