cmake_minimum_required(VERSION 3.20)
project(nfcaimeio LANGUAGES CXX)

add_library(nfcaimeio SHARED nfcaimeio.cpp nfcaimeio.def)
target_compile_features(nfcaimeio PRIVATE cxx_std_17)
target_compile_definitions(nfcaimeio PRIVATE WIN32_LEAN_AND_MEAN NOMINMAX _WIN32_WINNT=0x0603)
if(DEFINED NFCAIME_AES_KEY_HEX)
    target_compile_definitions(nfcaimeio PRIVATE NFCAIME_AES_KEY_HEX="${NFCAIME_AES_KEY_HEX}")
endif()
target_link_libraries(nfcaimeio PRIVATE winhttp bcrypt)
set_target_properties(nfcaimeio PROPERTIES OUTPUT_NAME "nfcaimeio")
